add. grid has been created

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
 <!--  -->
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="assets/css/styles.css" />
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="main">
+            <div class="header">
+                <li>The Book</li>
+                <li>Author</li>
+                <li>Press</li>
+                <li>Events</li>
+                <li>Shop</li>
+                <li>Contact</li>
+                <li>Podcasts</li>
+            </div>
+            <div class="second-main">
+                <div class="main-prim">hello</div>
+
+                <div class="main-sec">hello</div>
+            </div>
+        </div>
+    </body>
+</html>
